--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -36,7 +36,7 @@ jobs:
         env:
           # To report GitHub Actions status checks
           VALIDATE_PYTHON_BLACK: true
-          VALIDATE_PYTHON_FLAKE8: true
+          #VALIDATE_PYTHON_FLAKE8: true
           VALIDATE_PYTHON_ISORT: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 ...
