--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -265,6 +265,7 @@ services:
         ipv4_address: 192.168.1.2
       data_postgres:
 
+
 ####   Сервер подписчика с данного сервера будем брать данные и класть в CH####
   server_subscription:
     image: postgres:14
@@ -283,9 +284,33 @@ services:
       replication_network:
         ipv4_address: 192.168.1.3
       data_postgres:
+      click_net:
+        ipv4_address: 192.168.2.3
     depends_on:
       server_public:
         condition: service_healthy
+
+# Создание сервера ClickHouse
+  server_clickhouse:
+    image: clickhouse/clickhouse-server
+    container_name: server_clickhouse
+    ports: 
+      - 8123:8123
+    restart: unless-stopped
+    environment:
+      CLICKHOUSE_USER: username
+      CLICKHOUSE_PASSWORD: gfh0km
+      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+      CLICKHOUSE_DB: my_database
+    volumes:
+      - '/mnt/d/GitHub/spacex-api-analize/clickhouse/ch_data:/var/lib/clickhouse/'
+      - '/mnt/d/GitHub/spacex-api-analize/clickhouse/ch_data:/var/log/clickhouse-server/'
+      - '/mnt/d/GitHub/spacex-api-analize/clickhouse/ch_command:/docker-entrypoint-initdb.d/'
+    networks:
+      click_net:
+        ipv4_address: 192.168.2.2
+
+
 
 
 
@@ -329,4 +354,11 @@ networks:
       driver: default
       config:
         - subnet: 192.168.1.0/24
+  click_net:
+    name: clicknet
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.2.0/24
 
