--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,6 @@ x-airflow-common:
     
 
 services:
-
   postgres:
     image: postgres:13
     environment:
@@ -313,10 +312,7 @@ services:
     networks:
       click_net:
         ipv4_address: 192.168.2.2
-
-
-
-
+      metanet1:
 
 #### Create PGAdmin ####
   pgadmin:
@@ -338,6 +334,46 @@ services:
           memory: 1G
     networks:
       - data_postgres
+
+### Создание BI системы Metabase
+  metabase:
+    # image: my-metabase-with-clickhouse
+    build: ./metabase/
+    container_name: metabase
+    hostname: metabase
+    volumes:
+    - ./metabase/urandom:/dev/random:ro
+    ports:
+      - 3000:3000
+    environment:
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabaseappdb
+      MB_DB_PORT: 5432
+      MB_DB_USER: metabase
+      MB_DB_PASS: mysecretpassword
+      MB_DB_HOST: postgres
+    networks:
+      click_net:
+          ipv4_address: 192.168.2.4
+      metanet1:
+    healthcheck:
+      test: curl --fail -I http://localhost:3000/api/health || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
+
+  postgres_metabase:
+    image: postgres:latest
+    container_name: postgres
+    hostname: postgres
+    environment:
+      POSTGRES_USER: metabase
+      POSTGRES_DB: metabaseappdb
+      POSTGRES_PASSWORD: mysecretpassword
+    networks:
+      metanet1:
+
+
 
 #####  Allocated disk space  #####
 volumes:
@@ -365,4 +401,6 @@ networks:
       driver: default
       config:
         - subnet: 192.168.2.0/24
+  metanet1:
+    driver: bridge
 
